fixed menu not showing

--- a/src/components/Header/Menu/Menu.css
+++ b/src/components/Header/Menu/Menu.css
@@ -35,9 +35,3 @@ header .isVisible{
   opacity: 1;
   transition: opacity 1s linear;
 }
-
-@media screen and (max-width: 768px){
-  header .isVisible{
-    display: none;
-  }
-}
